--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,16 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "/index.js",
-      "use": "@vercel/node"
+      "src": "app.js",
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["dist/**"] }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.js"
+      "dest": "app.js"
     }
   ]
 }
